# AutowareAuto

./: cleanup_shm.sh  cyclonedds_localhost.xml  run_aw.sh  runall.sh
scripts/: analyze_rosbag2_v2.py  old.analyze_ros2_bag.py  reset_and_engage.py  smoothness_eval.py
src/additional/callback_profile/: CMakeLists.txt  package.xml
src/additional/callback_profile/msg/: CallbackProfile.msg  CallbackProfile.msg.bkp
src/additional/detobj_relay/: detobj_relay.py
src/additional/node_profiler/: CMakeLists.txt  package.xml
src/additional/node_profiler/include/node_profiler/: node_profiler.h
src/additional/node_profiler/src/: node_profiler.cpp
src/additional/patchwork-plusplus/ros/launch/: patchworkpp.launch.py
src/additional/pc_accumulator_for_dnn/: CMakeLists.txt  package.xml
src/additional/pc_accumulator_for_dnn/include/pc_accumulator_for_dnn/: pc_accumulator_for_dnn_node.hpp
src/additional/pc_accumulator_for_dnn/launch/: pc_accumulator_for_dnn.launch.py
src/additional/pc_accumulator_for_dnn/src/: pc_accumulator_for_dnn_node.cpp
src/additional/valo_msgs/: CMakeLists.txt  package.xml
src/core/autoware_msgs/autoware_perception_msgs/msg/: ObjectClassification.msg
src/launcher/autoware_launch/autoware_launch/launch/: e2e_simulator.launch.xml  rviz.launch.xml
src/launcher/autoware_launch/autoware_launch/launch/components/: tier4_perception_component.launch.xml
src/launcher/autoware_launch/autoware_launch/rviz/: autoware.rviz
src/universe/autoware.universe/control/autoware_vehicle_cmd_gate/src/: vehicle_cmd_gate.cpp  vehicle_cmd_gate.hpp
src/universe/autoware.universe/evaluator/perception_online_evaluator/launch/: perception_online_evaluator.launch.xml
src/universe/autoware.universe/launch/tier4_control_launch/launch/: control.launch.xml
src/universe/autoware.universe/launch/tier4_perception_launch/launch/: perception.launch.xml
src/universe/autoware.universe/perception/autoware_detected_object_validation/: package.xml
src/universe/autoware.universe/perception/autoware_detected_object_validation/launch/: obstacle_pointcloud_based_validator.launch.xml
src/universe/autoware.universe/perception/autoware_lidar_centerpoint/launch/: lidar_centerpoint.launch.xml
src/universe/autoware.universe/perception/autoware_lidar_valor/: package.xml  setup.cfg  setup.py
src/universe/autoware.universe/perception/autoware_lidar_valor/autoware_lidar_valor/: lidar_objdet_valor.py
src/universe/autoware.universe/perception/autoware_lidar_valor/launch/: lidar_valor.launch.py
src/universe/autoware.universe/perception/autoware_map_based_prediction/src/: map_based_prediction_node.cpp
src/universe/autoware.universe/perception/autoware_multi_object_tracker/src/: multi_object_tracker_node.cpp  multi_object_tracker_node.hpp
src/universe/autoware.universe/perception/autoware_traffic_light_classifier/src/: traffic_light_classifier_node.cpp  traffic_light_classifier_node.hpp
src/universe/autoware.universe/planning/autoware_obstacle_cruise_planner/src/: node.cpp
src/universe/autoware.universe/planning/autoware_static_centerline_generator/: package.xml
src/universe/autoware.universe/planning/behavior_velocity_planner/autoware_behavior_velocity_planner/: package.xml
src/universe/autoware.universe/planning/motion_velocity_planner/autoware_motion_velocity_planner_node/: package.xml
(+17 files in other folders)
