<?xml version="1.0"?>
<package format="3">
  <name>node_profiler</name>
  <version>0.0.1</version>
  <description>The node_profiler package</description>

  <maintainer email="ahmedius2@gmail.com">Ahmet Soyyigit</maintainer>
  <license>MIT</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>callback_profile</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
