<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_lidar_valor</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ahmedius2@gmail.com">humble</maintainer>
  <license>Apache-2.0</license>

  <depend>valo_msgs</depend>
  <depend>autoware_perception_msgs</depend>
  <depend>autoware_vehicle_msgs</depend>
  <depend>tier4_debug_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
